# MotorBase

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  EasyCAT_lib.lib  Makefile  README.md  mbed_app.json
includes/: constants.h  matrix.h  motor.h  robot.h
libs/EasyCat/: EasyCAT.cpp  EasyCAT.h
src/: main.cpp  matrix.cpp  motor.cpp  robot.cpp
